--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "astropy-iers-data" %}
-{% set version = "0.2025.6.9.0.39.3" %}
+{% set version = "0.2025.8.4.0.42.59" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
-  sha256: 4f8d0b0325187700a8bb5a8adaeae3570303fdb070537580936a08272e6d2d8d
+  sha256: a6e8723fe962e2b4103aa7837d021e6857d0bf2b4de28a891cd4c8d1919d4129
 
 build:
   noarch: python
@@ -17,9 +17,8 @@ build:
 requirements:
   host:
     - python {{ python_min }}
-    - setuptools
-    - setuptools-scm
-    - wheel
+    - hatchling
+    - hatch-vcs
     - pip
   run:
     - python >={{ python_min }}
